# ros-c

./: .ycm_extra_conf.py  Advise.txt  README.md  frames.gv  package_instruction.txt
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/include/hello/: demoAction.h  demoActionFeedback.h  demoActionGoal.h  demoActionResult.h  demoFeedback.h  demoGoal.h  demoResult.h  person.h  ser.h  serRequest.h  serResponse.h
devel/lib/hello/: action_pub  action_sub  hello_pub  hello_sub  msg_pub  msg_sub  serve_pub  serve_sub  tf_pub
devel/lib/pkgconfig/: hello.pc  task.pc  test.pc
devel/lib/task/: control_publisher  control_subscriber  image_publisher  image_publisher_2  image_subscriber  image_subscriber_syc
devel/lib/test/: getImage
devel/share/hello/cmake/: hello-msg-paths.cmake  helloConfig.cmake
devel/share/hello/msg/: demoFeedback.msg  demoGoal.msg  demoResult.msg
devel/share/task/cmake/: taskConfig.cmake
src/hello/: CMakeLists.txt  package.xml
src/hello/include/: book_class.h
src/hello/launch/: hello_launch.launch
src/hello/msg/: person.msg
src/hello/src/: action_pub.cpp  action_sub.cpp  book_class.cpp  hello_pub.cpp  hello_sub.cpp  msg_pub.cpp  msg_sub.cpp  serve_pub.cpp  serve_sub.cpp  tf_pub.cpp
src/hello/srv/: ser.srv
src/task/: CMakeLists.txt
src/task/launch/: cversion.launch  pversion.launch
src/task/src/: control_publisher.cpp  control_publisher.py  image_publisher.cpp  image_publisher.py  image_subscriber_syc.cpp  image_subscriber_syc.py
src/test/: CMakeLists.txt
src/test/src/: getImage.cpp  getImage.py
(+56 files in other folders)
